[tool.poetry]
name = "sgd_lunarlander"
version = "0.1.0"
description = ""
authors = ["Paweł 'Pawel095' Pankiewicz <pawelp6020@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^1.9.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
black = "^19.10b0"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
